--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "relay-poc",
+  "name": "relay-experimental-ts-example",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
